--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,4 +3,6 @@ project(src)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(src domain/main.cpp domain/Event.h domain/KeyEvents.cpp domain/KeyEvents.h domain/Event.cpp)
+add_executable(src domain/main.cpp domain/Event.h domain/KeyEvents.cpp domain/KeyEvents.h domain/Event.cpp
+        domain/KeyListener.cpp
+        domain/KeyListener.h)
